# TicTacToeCPP

./: CMakeLists.txt  README.md
include/: Board.hpp  Coordinates.hpp  Game.hpp  GameState.hpp  HumanAgent.hpp  TileState.hpp
src/agent/: CMakeLists.txt  HumanAgent.cpp
src/app/: CMakeLists.txt  main.cpp
src/board/: Board.cpp  CMakeLists.txt
src/game/: CMakeLists.txt  Game.cpp
